--- a/layouts/partials/header-no-menu.html
+++ b/layouts/partials/header-no-menu.html
@@ -1,7 +1,7 @@
 <header class="header">
     <div class="branding">
-        <a class="logo" href="{{ "" | absURL }}" aria-label="Documentation">
-            <img src="{{ "logo.svg" | absURL }}" />
+        <a class="logo" href="{{ "" | relURL }}" aria-label="Documentation">
+            <img src="{{ "logo.svg" | relURL }}" />
         </a>
     </div>
     <div class="search">
