--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,8 +1,8 @@
     <header class="header">
         <div class="branding">
             <button class="menu" aria-hidden="true"></button>
-            <a class="logo" href="{{ "" | absURL }}" aria-label="Documentation">
-                <img src="{{ "logo.svg" | absURL }}" />
+            <a class="logo" href="{{ "" | relURL }}" aria-label="Documentation">
+                <img src="{{ "logo.svg" | relURL }}" />
             </a>
         </div>
         <div class="search">
