--- a/layouts/partials/breadcrumb-list.html
+++ b/layouts/partials/breadcrumb-list.html
@@ -2,7 +2,7 @@
 {{- range .sections }}
     {{- if and (.IsAncestor $page) (ne $page .) }}
         <div class="crumb">
-            <a href="{{.Permalink}}">{{ .Title }}</a>
+            <a href="{{.RelPermalink}}">{{ .Title }}</a>
         </div>
         {{ partial "breadcrumb-list.html" (dict "page" $page "sections" .Sections) }}
     {{- end -}}
