--- a/layouts/_default/list_li.html
+++ b/layouts/_default/list_li.html
@@ -17,10 +17,10 @@
                 {{ .Content }}
 
                 <ul>
-                    {{ range .Pages }} 
+                    {{ range .RegularPages }}
                         <li>
                             <a href="{{ .RelPermalink }}">{{ .Title }}</a>
-                        </li>   
+                        </li>
                     {{ end }}
                 </ul>
             </section>
