creates //index.html links which is not what we want Revert "ugly: tack on index.html for / links"
This reverts commit 6213a705eea99f1810b07f4099fce796beb0e751.

--- a/layouts/partials/header-no-menu.html
+++ b/layouts/partials/header-no-menu.html
@@ -1,6 +1,6 @@
 <header class="header">
     <div class="branding">
-        <a class="logo" href="{{ "" | relURL }}/index.html" aria-label="Documentation">
+        <a class="logo" href="{{ "" | relURL }}" aria-label="Documentation">
             <img src="{{ "logo.svg" | relURL }}" />
         </a>
     </div>
