--- a/layouts/partials/next-prev.html
+++ b/layouts/partials/next-prev.html
@@ -1,6 +1,6 @@
 <footer class="next-prev{{ if and (.NextInSection) (not .PrevInSection) }} one-column{{ end }}{{ if and (.PrevInSection) (not .NextInSection) }} one-column{{ end }}">
     {{ with .NextInSection }}
-    <a href="{{ .URL }}" class="prev">
+    <a href="{{ .RelPermalink }}" class="prev">
         <span class="icon"></span>
         <span class="type">Previous</span>
         <span class="name">{{ .Title }}</span>
@@ -8,7 +8,7 @@
     {{ end }}
 
     {{ with .PrevInSection }}
-    <a href="{{ .URL }}" class="next">
+    <a href="{{ .RelPermalink }}" class="next">
         <span class="type">Next</span>
         <span class="name">{{ .Title }}</span>
         <span class="icon"></span>
