tack on index.html to the root

--- a/layouts/partials/header-no-menu.html
+++ b/layouts/partials/header-no-menu.html
@@ -1,6 +1,6 @@
 <header class="header">
     <div class="branding">
-        <a class="logo" href="{{ "" | relURL }}" aria-label="Documentation">
+        <a class="logo" href="{{ "" | relURL }}" aria-label="Documentation" onclick="window.location=(this.href+'/index.html'); return false;">
             <img src="{{ "logo.svg" | relURL }}" />
         </a>
     </div>
