--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,7 +1,7 @@
     <header class="header">
         <div class="branding">
             <button class="menu" aria-hidden="true"></button>
-            <a class="logo" href="{{ "" | relURL }}" aria-label="Documentation">
+            <a class="logo" href="{{ "" | relURL }}" aria-label="Documentation" onclick="window.location=(this.href+'/index.html'); return false;">
                 <img src="{{ "logo.svg" | relURL }}" />
             </a>
         </div>
